Changed name of website

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>
-			Free Money
+			Free Cash
 		</title>
 		
 		<link rel="stylesheet" type="text/css" href="style.css" />
